# JayD-Nuvoton-Firmware

./: .gitignore  CMakeLists.txt  Input.h  Makefile  Nu_Link_8051_Driver.ini  README.md  STARTUP.A51  buttonHandler.c  config.json  encoderHandler.c  i2c_test.uvgui.Domagoj  i2c_test.uvopt  i2c_test.uvproj  listHandler.c  main.c  sliderHandler.c
Include/: Common.h  Delay.h  Display.h  N76E616.h  SFR_Macro.h  Typedef.h  bool.h  buttons.h  encoders.h  i2c.h  list.h  sliders.h
Src/: buttonHandler.c  encoderHandler.c  listHandler.c  main.c  sliderHandler.c
inc/: Common.h  Define.h  Delay.h  Display.h  N76E616.h  SFR_Macro.h  Typedef.h  Version.h  bool.h  buttons.h  encoders.h  i2c.h  list.h  sliders.h
src/: buttonHandler.c  encoderHandler.c  listHandler.c  main.c  sliderHandler.c
